# VIKO-IS25SN_AM

./: CMakeLists.txt  README.md  hello  hello.cpp  main.cpp
1 praktinis/: task15.cpp
2 praktinis/: task 16.cpp
3_praktinis/: task22.cpp
3_praktinis/DB/: menu.txt  receipt.txt
Funkcijos_rekursija/: task18.cpp
Kintamieji/: taks4.cpp  task1.cpp  task2.cpp  task3.cpp  task5.cpp  task6.cpp
Kontrolinis/: taskKontrolinis.cpp
Masyvai/: task13.cpp  task14.cpp
Paskaitos/: Darbas_su_failais.cpp
Paskaitos/DB/: Rezultatu_Failas.txt
Salygos_Ciklai/: task10.cpp  task11.cpp  task12.cpp  task7.cpp  task8.cpp  task9.cpp
