cmake_minimum_required(VERSION 4.1)
project(VIKO_IS25SN_AM)

set(CMAKE_CXX_STANDARD 20)

add_executable(VIKO_IS25SN_AM main.cpp
        Kintamieji/task1.cpp
        Kintamieji/task2.cpp
        Kintamieji/task3.cpp
        Kintamieji/taks4.cpp
        Kintamieji/task5.cpp
        Kintamieji/task6.cpp
)
